# Life-of-Boids

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  Project_Class.xlsx  README.md
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  fonction.hpp
docker/: CI.md  Dockerfile
gitlab_runner/: config.toml
scripts/MacOS/: build.sh  test.sh
scripts/Windows/: build.sh  test.sh
src/: CMakeLists.txt  common.cpp  common.hpp  coupled.cpp  main.cpp  main.h
src/config/: config.cpp  config.h
src/constants/: CMakeLists.txt  constant.cpp  constant.h
src/display/: CMakeLists.txt  display.cpp  display.h  display.hpp  triangle.hpp
src/display/shaders/: points.cpp  points.hpp  triangle.hpp
src/gtests/: CMakeLists.txt
src/movement/: CMakeLists.txt  agent.cpp  agent.hpp  fruit.cpp  fruit.h  law.cpp  law.hpp  object.cpp  object.h  obstacle.cpp  obstacle.h
src/movement/agents/: CMakeLists.txt  agent.cpp  agent.h  bird.cpp  bird.h  predator.cpp  predator.h
src/movement/fruits/: CMakeLists.txt  eco.cpp  eco.h  fruit.cpp  fruit.h  tree.cpp  tree.h
src/movement/obstacles/: CMakeLists.txt  obstacle.cpp  obstacle.h
test/: CMakeLists.txt  unit_gtest.cpp
